--- a/css/styles.css
+++ b/css/styles.css
@@ -231,20 +231,34 @@ p
 
 .more
 {
+	position: relative;
 	border-radius:5px;
 	padding:5px;
 	margin-top:100px;
 	font-weight:bold;
 	text-decoration:none;
 	color:black;
-	transition:color 1s;
+	transition:color 0.2s;
 }
-
+a.more::after 
+{
+	content: '';
+	height: 2px;
+	position: absolute;
+	bottom: -4px;
+	left: 0;
+	width: 0%;
+	background:orange;
+	transition: 0.2s;
+}
 .more:hover
 {
 	color:orange;
 }
-
+a.more:hover::after
+{
+    width: 100%;
+}
 .margin-top
 {
 	margin-top: 250px;
